[package]
name = "actix-todo"
version = "0.1.0"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"

[dependencies]
bytes = "1.5.0"
futures-core = "0.3.28"
progenitor-client = "0.4.0"
reqwest = { version = "0.11.20", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_urlencoded = "0.7.1"

